--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【更新】拜登欢迎川普重返白宫</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【更新】川普抵白宫 拜登：欢迎回家</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418100-AFP__20250120__2194886540__v2__Preview__TheInaugurationOfDonaldJTrumpAsThe47thPresid-600x400.jpg" />
 <h6>2025年1月20日，川普抵达圣约翰教堂。(SCOTT OLSON / GETTY IMAGES NORTH AMERICA / Getty Images via AFP)
 </h6>
@@ -14,6 +14,22 @@
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
 <p>以下是川普就职典礼的更新：</p>
+<h2>拜登和川普一起前往美国国会大厦</h2>
+<p>在今天的宣誓就职仪式之前，川普和拜登乘坐同一辆豪华轿车前往美国国会大厦。</p>
+<p><span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">接下来，川普和当选副总统万斯将在国会大厦圆形大厅内举行的仪式上宣誓就职。</span></span><span class="jCAhz ChMk0b"><span class="ryNqvb">川普也将发表就职演说。</span></span></span></p>
+<h2>拜登给川普留下了一封信</h2>
+<p>拜登总统周一向记者证实，他在椭圆形办公室给候任总统川普留下了一封信。但他拒绝透露更多细节。</p>
+<p>从1980年代末开始，美国将卸任的总统在白宫椭圆形办公室都会给继任者留下一封信，这已经成为一种总统交接惯例。四年前，川普离开白宫时也给拜登留下了一封信，拜登后来形容这封信“非常慷慨”。</p>
+<h2>普京祝贺川普就职</h2>
+<p>在川普就职典礼前几个小时，俄罗斯总统弗拉基米尔·普京向川普表示祝贺，同时表示愿意与美国新政府就乌克兰和核武器问题进行对话。</p>
+<p>普京在俄罗斯国家电视台播出的俄罗斯安全委员会会议上发表了上述言论。他表示，希望确保乌克兰实现长期和平，而不是短暂停火。</p>
+<p>“我们看到了美国新当选总统及其团队成员的声明，他们希望恢复与俄罗斯直接接触。”普京说。</p>
+<p>“我们还听到他（川普）关于竭尽可能防止第三次世界大战爆发的声明。我们当然欢迎这种态度，并祝贺美国当选总统就职。”</p>
+<h2>美国总统就职典礼罕见在室内举行 这并非首次</h2>
+<p>通常，美国总统的就职仪式都是在室外举行。但由于首都地区的低温天气，川普的就职典礼将在室内举行。</p>
+<p>上一次发生这种情况是在1985年，当时罗纳德·里根（Ronald Reagan）在国会大厦圆形大厅宣誓就职。</p>
+<p>川普在“真相社交”上说，“我们将于周一开放第一资本体育馆，即时观看这一历史性事件，并举办总统游行。宣誓就职后，我将加入到第一资本体育馆的人群中。”</p>
+<figure id="attachment_14418146" aria-describedby="caption-attachment-14418146" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418146-AFP__20250120__36UU9HG__v1__Preview__UsPoliticsTrumpInauguration-e1737387677228.jpg"><img decoding="async" class="size-full wp-image-14418146" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418146-AFP__20250120__36UU9HG__v1__Preview__UsPoliticsTrumpInauguration-e1737387677228.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418146" class="wp-caption-text">2025年1月20日，川普在国会大厦圆形大厅宣誓就职总统前，圆形大厅内的座位图。(Andrew Harnik / POOL / AFP)</figcaption></figure>
 <h2>白宫茶会</h2>
 <p>今年，拜登和川普以及他们的配偶将在白宫一起喝茶。茶会将闭门举行，不允许媒体进入。</p>
 <p><span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">白宫茶会是就职时刻之一，它是民主选举后权力和平移交的明显标志。</span></span></span></p>
@@ -22,6 +38,7 @@
 <p>“很好。”他回答。</p>
 <h2>拜登夫妇欢迎川普夫妇重返白宫</h2>
 <p>美国总统拜登和第一夫人吉尔欢迎候任总统川普和川普夫人梅拉尼娅来到白宫。</p>
+<p>“欢迎回家。”拜登对川普说。</p>
 <p>通常，在上午的礼拜之后，当选总统、当选副总统及其配偶会访问白宫。当选总统和即将卸任的总统会在那里举行简短的私人会面。</p>
 <figure id="attachment_14418118" aria-describedby="caption-attachment-14418118" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418118-AFP__20250120__36UU8UF__v1__Preview__UsPoliticsTrumpInauguration-e1737385617194.jpg"><img decoding="async" class="size-full wp-image-14418118" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418118-AFP__20250120__36UU8UF__v1__Preview__UsPoliticsTrumpInauguration-e1737385617194.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14418118" class="wp-caption-text">2025年1月20日，拜登夫妇欢迎川普夫妇来白宫。(ROBERTO SCHMIDT / AFP)</figcaption></figure>
 <p>第一夫人吉尔在担任美国第一夫人的最后一天穿着一身蓝。蓝色已经成为拜登一家非常具有代表性的颜色。</p>
@@ -60,16 +77,16 @@
 <p>据媒体报导，川普近日与参议院共和党人举行的两小时会议中表示，他已准备约100份行政令，计划在就职首日签署。这些行政令主要聚焦于他竞选期间提出的政策，包括关税、边境安全等议题。</p>
 <p>他的“美国优先”政策的核心措施包括：驱逐数百万非法移民；对从共产中国和世界其它国家的进口商品征收高额关税；提高联邦政府的工作效率；清理军队中阻碍战斗力的“觉醒”（woke）文化；清除司法和情报系统中的反美国势力；继续减税和削减政府支出，并对抗不断增加的美国国债。</p>
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
+<p>（本文参考了CNN的报导。）</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418106.md#1">组图：川普夫妇与万斯夫妇参加教堂礼拜服务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415145.md#1">【直播】川普总统第二任期就职典礼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417922.md#1">川普宣誓就职后 可能发布哪些行政令</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418132.md#1">普京愿意与川普政府合作 就俄乌战对话</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418124.md#1">组图：拜登夫妇欢迎川普夫妇重返白宫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418042.md#1">川普宣誓就职前 拜登再赦免四人</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
@@ -92,5 +109,5 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412714.md#1">中医师推荐年货中药材 为年菜增添滋补功效</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409994.md#1">研究：锌可能有助于抑制抗生素产生抗药性</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/19/n14416866.htm">【更新】拜登欢迎川普重返白宫</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/19/n14416866.htm">【更新】川普抵白宫 拜登：欢迎回家</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416866.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
